<resources>
    <string name="app_name">DIVE HUB</string>
    <string name="login_welcome">Please Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="create_an_account">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_button">Create Account</string>
    <string name="createAccountText">Create an Account</string>
    <string name="divetype">Dive Type:</string>
    <string name="enter_a_type_of_dive">Enter a Type of Dive</string>
    <string name="maxdepth">Maximum Depth:</string>
    <string name="enter_a_max_depth_of_dive">Enter Max Depth of the Dive</string>
    <string name="enter_time_spent_at_depth">Enter Time Spent at Depth</string>
    <string name="time">Time:</string>
    <string name="log">Log Dive</string>
    <string name="nothing_to_show">Nothing to show, time to go diving!</string>
    <string name="preference_file_key">daclinkPreferenceFileNameDivelog</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeyDiveLog</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_any_additional_comments">Enter Any Additional Comments</string>
    <string name="additional_comments">Additional Comments:</string>
    <string name="view_logs">View Logs</string>
    <string name="log_dive">Log Dive</string>
    <string name="settings">Settings</string>
    <string name="view_class_logs">View Class Logs</string>
    <string name="submit_dive_plan">Submit Dive Plan</string>
    <string name="change_username">Change Username</string>
    <string name="bg">BACKGROUND</string>
    <string name="icon">ICON</string>
    <string name="instructorsClass">Instructors</string>
    <string name="deleting_your_account">Deleting Your Account</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_the_dive_hub">Welcome to the Dive Hub</string>
    <string name="get_started">Get Started</string>
    <string name="username_user">Username: User</string>
    <string name="passwordInSettings">Password: ••••••••••</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="enter_a_new_username">Enter a New Username</string>
    <string name="submit">Submit</string>
    <string name="enter_a_new_password">Enter a New Password</string>
    <string name="divelog">DiveLog</string>
    <string name="previously_logged_dives">Previously Logged Dives</string>
    <string name="log_a_new_dive">Log a New Dive</string>
    <string name="dive_instructors">Dive Instructors</string>
    <string name="admin_settings">**Admin Settings**</string>
    <string name="super_special">SUPER SPECIAL</string>
    <string name="deleting_a_user_s_account">Deleting a User\'s Account</string>
    <string name="make_admin">Make Admin</string>
    <string name="make_instructor">Make Instructor</string>
    <string name="enter_a_username">Enter a Username:</string>
    <string name="admin_username_prompt">Username:</string>
</resources>