<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/changeUsernameDialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_a_new_username"
        android:textColor="@color/deep_blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changeUsernameDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Please enter new username"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/changeUsernameDialogButton"
        android:textColor="@color/orange"
        android:background="@drawable/button_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit" />
</LinearLayout>