<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogDiveActivity"
    android:background="@color/light_blue">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logDisplayRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/divelog_recycler_item" />

    <TextView
        android:id="@+id/diveTypeLabelTextView"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/divetype"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/deep_blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logDisplayRecyclerView" />

    <EditText
        android:id="@+id/diveTypeInputEditText"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_a_type_of_dive"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diveTypeLabelTextView" />

    <TextView
        android:id="@+id/timeLabelTextView"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textSize="24sp"
        android:textColor="@color/deep_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diveTypeInputEditText" />

    <EditText
        android:id="@+id/timeInputEditText"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_time_spent_at_depth"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeLabelTextView"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/maxDepthLabelTextView"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/maxdepth"
        android:textSize="24sp"
        android:textColor="@color/deep_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeInputEditText" />

    <EditText
        android:id="@+id/maxDepthInputEditText"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_a_max_depth_of_dive"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maxDepthLabelTextView"
        tools:layout_editor_absoluteX="58dp" />

    <TextView
        android:id="@+id/addiCommLabelTextView"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/additional_comments"
        android:textSize="24sp"
        android:textColor="@color/deep_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxDepthInputEditText" />

    <EditText
        android:id="@+id/addiCommInputEditText"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_any_additional_comments"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addiCommLabelTextView"
        tools:layout_editor_absoluteX="69dp" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:text="@string/log"
        android:background="@drawable/button_border"
        android:textColor="@color/orange"

        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addiCommInputEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>