<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AdminSettingsActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/icon"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/super_special"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/adminEnterUsernameTextView"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/admin_username_prompt"
        android:textColor="@color/deep_blue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/adminUsernameGivePermsAccountEditText"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@id/adminEnterUsernameTextView"
        app:layout_constraintStart_toEndOf="@id/adminEnterUsernameTextView" />

    <Button
        android:id="@+id/makeInstructorButton"
        android:layout_width="195dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:text="@string/make_instructor"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminEnterUsernameTextView"
        app:layout_constraintEnd_toStartOf="@id/makeAdminButton"
        />

    <Button
        android:id="@+id/makeAdminButton"
        android:layout_width="195dp"
        android:layout_height="65dp"
        android:background="@drawable/button_border"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/make_admin"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/makeInstructorButton"
        app:layout_constraintTop_toBottomOf="@id/adminEnterUsernameTextView" />

    <TextView
        android:id="@+id/deleteAccountTextView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/deleting_a_user_s_account"
        android:textColor="@color/deep_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeInstructorButton" />

    <EditText
        android:id="@+id/adminUsernameDeleteAccountEditText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountTextView" />

    <EditText
        android:id="@+id/adminPasswordDeleteAccountEditText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminUsernameDeleteAccountEditText" />

    <Button
        android:id="@+id/adminDeleteAccountButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:background="@drawable/red_button_fill"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminPasswordDeleteAccountEditText"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>