<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/instructorsButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/instructors"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_border"
        android:textColor="@color/orange"
        />

    <TextView
        android:id="@+id/changeUsernameTextView"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/username_user"
        android:textColor="@color/deep_blue"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorsButton" />

    <ImageButton
        android:id="@+id/usernameEditImageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="30dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/changeUsernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/instructorsButton"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit_username" />

    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/passwordInSettings"
        android:textColor="@color/deep_blue"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeUsernameTextView" />

    <ImageButton
        android:id="@+id/passwordEditImageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="30dp"
        android:layout_marginStart="20dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/changePasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditImageButton"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit_password"
        />

    <TextView
        android:id="@+id/deleteAccountTextView"
        android:layout_width="375dp"
        android:layout_height="66dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/deleting_your_account"
        android:textColor="@color/deep_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordTextView" />

    <EditText
        android:id="@+id/passwordDeleteAccountEditText"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountTextView" />

    <EditText
        android:id="@+id/repeatPasswordDeleteAccountEditText"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:autofillHints="Please reenter password"
        android:gravity="center"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordDeleteAccountEditText" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:background="@drawable/red_button_fill"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordDeleteAccountEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>