<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiverLandingPage">

    <TextView
        android:id="@+id/titleWelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:layout_margin="16dip"
        android:gravity="center"
        android:text="Welcome, [user]"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/viewLogsButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/view_logs"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleWelcomeTextView"
        />

    <Button
        android:id="@+id/logDiveButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/log_dive"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLogsButton"
        />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/settings"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDiveButton"
        app:layout_constraintVertical_bias="0.85"/>

</androidx.constraintlayout.widget.ConstraintLayout>